--- a/config/aws.yml
+++ b/config/aws.yml
@@ -1,3 +1,3 @@
 development:
-  access_key_id: ENV["AKIAJWPITLQBXV34AZDA"]
-  secret_access_key: ENV['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']
+  access_key_id: ENV[""]
+  secret_access_key: ENV['']
